@@ -1,3 +1,7 @@
+2012-04-22  Ian Lance Taylor  <iant@google.com>
+
+	* godump.c (go_output_typedef): Dump size of structs.
+
 2012-04-20  Ulrich Weigand  <ulrich.weigand@linaro.org>
 
 	Backport from mainline:
